--- a/pages/browse-books.page
+++ b/pages/browse-books.page
@@ -1,3 +1,5 @@
+<squarespace:script src="inflate-booklist.js"/>
+
 <!--
     FIXME: for now, do styling inline with HTML. However, this is not a good
     long term solution because we're inside the body tag. Once we're good on
@@ -76,10 +78,6 @@
     max-width: 150px;
 }
 </style>
-<!--
-    TODO: enabling script in body messes with the page load, debug later
-    <script src="../scripts/inflate-booklist.js"/>
--->
 <div class="container">
     <div class="menu-pane">
         <input name="search" class="filter-search" type="text" placeholder="Search"/>
