--- a/pages/browse-books.page
+++ b/pages/browse-books.page
@@ -31,6 +31,11 @@
     height: 20px;
 }
 
+.up-or-down-icon {
+    max-width: 15px;
+    display: inline-block;
+}
+
 .x-icon {
     width: 10px;
     height: 10px;
@@ -69,11 +74,8 @@
 }
 
 .filter-tag {
-    font-size: 12px;
     background-color: #eee;
     padding: 0px 10px 0px 10px;
-    font-weight: lighter;
-    color: #000;
     margin-right: 10px;
     margin-bottom: 10px;
     float: left;
@@ -82,12 +84,27 @@
 
 .tag-text {
     display: inline-block;
+    font-size: 12px;
+    font-weight: lighter;
+    color: #000;
+}
+
+.tag-text.light-text {
+    color: #aaaaaa;
 }
 
 .filter-section-top {
+    margin-bottom: 10px;
+}
+
+.filter-section-top-text {
     font-variant: small-caps;
     font-weight: normal;
     color: #aaaaaa;
+    display: inline-block;
+}
+
+.checkbox-pane {
     margin-bottom: 10px;
 }
 
@@ -180,32 +197,50 @@
         </div>
         <div class="filters-reading-level">
             <div class="filter-section-top">
-                reading level
+                <img class="up-or-down-icon" src="../assets/up-icon.png" alt="Collapse menu icon">
+                <div class="filter-section-top-text">reading level</div>
+            </div>
+            <div class="checkbox-pane">
+                <div class="checkbox-row">
+                    <input id="checkbox-early-childhood" type="checkbox"/>
+                    <label for="checkbox-early-childhood" class="tag-text">Early Childhood</label>
+                    <div id="quantity-early-childhood" class="tag-text light-text">(12)</div>
+                </div>
+                <div class="checkbox-row">
+                    <input id="checkbox-elementary" type="checkbox"/>
+                    <label for="checkbox-elementary" class="tag-text">Elementary</label>
+                    <div id="quantity-early-childhood" class="tag-text light-text">(15)</div>
+                </div>
             </div>
         </div>
         <div class="filters-representation">
             <div class="filter-section-top">
-                representation
+                <img class="up-or-down-icon" src="../assets/down-icon.png" alt="Collapse menu icon">
+                <div class="filter-section-top-text">representation</div>
             </div>
         </div>
         <div class="filters-themes">
             <div class="filter-section-top">
-                themes
+                <img class="up-or-down-icon" src="../assets/down-icon.png" alt="Collapse menu icon">
+                <div class="filter-section-top-text">themes</div>
             </div>
         </div>
         <div class="filters-format">
             <div class="filter-section-top">
-                format
+                <img class="up-or-down-icon" src="../assets/down-icon.png" alt="Collapse menu icon">
+                <div class="filter-section-top-text">format</div>
             </div>
         </div>
         <div class="filters-included-in">
             <div class="filter-section-top">
-                included in ...
+                <img class="up-or-down-icon" src="../assets/down-icon.png" alt="Collapse menu icon">
+                <div class="filter-section-top-text">included in</div>
             </div>
         </div>
         <div class="filters-curriculum-available">
             <div class="filter-section-top">
-                curriculum available
+                <img class="up-or-down-icon" src="../assets/down-icon.png" alt="Collapse menu icon">
+                <div class="filter-section-top-text">curriculum available</div>
             </div>
         </div>
     </div>
