--- a/pages/browse-books.page
+++ b/pages/browse-books.page
@@ -11,7 +11,6 @@
 .container {
     position: relative;
     width: 100%;
-    height: 600px;
 }
 
 .menu-pane {
@@ -127,6 +126,8 @@
     margin-right: 20px;
     margin-bottom: 20px;
     cursor: pointer;
+    max-width: 150px;
+    overflow-x: scroll;
 }
 
 /* TODO: fix hard-coded values */
