--- a/pages/browse-books.page
+++ b/pages/browse-books.page
@@ -136,8 +136,8 @@
     height: 12px;
     width: 3px;
     display: inline-block;
-    transform: translateY(2.5px);
-    margin-right: 2.5px;
+    transform: translateY(2px);
+    margin-right: 5px;
 }
 
 .rl-text {
@@ -262,11 +262,11 @@
             </div>
             <div class="m-book-info-col">
                 <div class="m-title-row">
-                    <div class="m-title">Hurricane Child</div>
+                    <div class="m-title">Ttile</div>
                     <button class="m-lesson-plan-btn">click here for lesson plans</button>
                 </div>
                 <div class="m-header">Author</div>
-                <div class="m-author m-text">Kacen Callender</div>
+                <div class="m-author m-text">Author</div>
                 <div class="m-header">Tags</div>
                 <div class="m-tags-pane">
                     <div class="m-tag">Junior High</div>
@@ -282,13 +282,14 @@
                 </div>
                 <div class="m-header">Synopsis</div>
                 <div class="m-synopsis m-text">
-                Born during a storm, Caroline Murphy, a 12-year-old black girl, is convinced that she has been cursed with bad luck.<br/><br/>
-    The old ladies around her way say this is the fate of any child born during a hurricane. Recent events in her life seem to confirm this. Feeling unwanted by everyone, especially since the abrupt departure of her mom, Caroline ...
+                    Synopsis
                 </div>
+                <!--
                 <div class="m-header m-header-lesson-plans">Click here for lesson plans</div>
                 <div class="m-lesson-plans m-text">Curriculum is currently available for this title. Hope in a Box has developed the nation’s largest library of LGBTQ-inclusive curriculum. Our guides are written by and for educators, tied to Common Core State Standards, and adapted for in-person and virtual learning. We want your feedback -- let us know which books to cover next!</div>
                 <div class="m-header m-header-buy-book">Click here to buy this book</div>
                 <div class="m-buy-book m-text">Hope in a Box supports LGBTQ-friendly independent bookstores. Follow the link above to purchase this book from Northshire Bookstore.</div>
+                -->
             </div>
         </div>
     </div>
@@ -380,81 +381,7 @@
     </div>
     <div class="results-pane">
         <div class="grid-container">
-            <div class="grid-item" data-book-title="Like a Love Story">
-                <img class="book-cover" src="../assets/book-covers/like-a-love-story.jpg" alt="Like a Love Story">
-                <div class="item-reading-level">
-                    <div class="stripe"></div>
-                    <div class="rl-text">
-                        early high school
-                    </div>
-                </div>
-                <div class="item-title">
-                    Like a Love Story
-                </div>
-                <div class="item-author">
-                    Abdi Nazemian
-                </div>
-            </div>
-            <div class="grid-item" data-book-title="pet">
-                <img class="book-cover" src="../assets/book-covers/like-a-love-story.jpg" alt="Like a Love Story">
-                <div class="item-reading-level">
-                    <div class="stripe"></div>
-                    <div class="rl-text">
-                        early high school
-                    </div>
-                </div>
-                <div class="item-title">
-                    Pet
-                </div>
-                <div class="item-author">
-                    Abdi Nazemian
-                </div>
-            </div>
-            <div class="grid-item" data-book-title="Red at the Bone">
-                <img class="book-cover" src="../assets/book-covers/like-a-love-story.jpg" alt="Like a Love Story">
-                <div class="item-reading-level">
-                    <div class="stripe"></div>
-                    <div class="rl-text">
-                        early high school
-                    </div>
-                </div>
-                <div class="item-title">
-                    Red at the Bone
-                </div>
-                <div class="item-author">
-                    Abdi Nazemian
-                </div>
-            </div>
-            <div class="grid-item" data-book-title="Hurricane Child">
-                <img class="book-cover" src="../assets/book-covers/like-a-love-story.jpg" alt="Like a Love Story">
-                <div class="item-reading-level">
-                    <div class="stripe"></div>
-                    <div class="rl-text">
-                        early high school
-                    </div>
-                </div>
-                <div class="item-title">
-                    Like a Love Story
-                </div>
-                <div class="item-author">
-                    Abdi Nazemian
-                </div>
-            </div>
-            <div class="grid-item" data-book-title="Americanah">
-                <img class="book-cover" src="../assets/book-covers/like-a-love-story.jpg" alt="Like a Love Story">
-                <div class="item-reading-level">
-                    <div class="stripe"></div>
-                    <div class="rl-text">
-                        early high school
-                    </div>
-                </div>
-                <div class="item-title">
-                    Americanah
-                </div>
-                <div class="item-author">
-                    Abdi Nazemian
-                </div>
-            </div>
+            Loading books ...
         </div>
     </div>
 </div>
