--- a/pages/browse-books.page
+++ b/pages/browse-books.page
@@ -105,6 +105,10 @@
     display: inline-block;
 }
 
+input[type='checkbox'] {
+    margin-right: 5px;
+}
+
 .checkbox-pane {
     margin-bottom: 10px;
 }
