--- a/pages/browse-books.page
+++ b/pages/browse-books.page
@@ -177,6 +177,9 @@ input[type='checkbox'] {
 
 .rl-text {
     display: inline-block;
+    font-size: 14px;
+    letter-spacing 1px;
+    color: #666;
 }
 
 .item-reading-level {
@@ -201,6 +204,23 @@ input[type='checkbox'] {
 
 .cover-container {
     height: 250px;
+    position: relative;
+}
+
+.cover-container:hover {
+    transform: translateY(-10px);
+    filter: drop-shadow(2px 2px 2px #aaa);
+}
+
+.curriculum-icon-container {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+}
+
+.curriculum-icon-img {
+    width: 35px;
+    height: 35px;
 }
 
 .hidden {
