--- a/pages/browse-books.page
+++ b/pages/browse-books.page
@@ -310,6 +310,7 @@ input[type='checkbox'] {
     font-size: 16px;
     color: #000;
     font-weight: bold;
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 
